# hermes_logistic_assistant

./: .gitignore  .pre-commit-config.yaml  DEVELOPER_GUIDE.md  EXAMPLE_QUERIES.md  IMPLEMENTATION_COMPLETE.md  PROJECT_SUMMARY.md  README.md  main.py  pyproject.toml  start.sh
backend/: .pre-commit-config.yaml  README.md  check_models.py  main.py  pyproject.toml
backend/app/: main.py
backend/app/ai/: llm.py  predictor.py
backend/app/ai/master_agent/: __init__.py  agent.py  state.py  tools.py
backend/app/ai/sub_agents/analytics_agent/: agent.py
backend/app/ai/sub_agents/prediction_agent/: agent.py
backend/app/api/v1/endpoints/: logistics.py
backend/app/core/: config.py
backend/app/services/: data_service.py
backend/data/: shipments.csv
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  api.js
frontend/src/components/: ChartRenderer.js  ChatBox.js  TableRenderer.js
