[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "pandas",
    "uvicorn",
    "scikit-learn",
    "python-multipart",
    "google-generativeai",
    "websockets",
    "python-dotenv",
    "httpx>=0.28.1",
    "matplotlib>=3.10.7",
    "streamlit>=1.51.0",
]
