[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "pre-commit>=4.5.0",
    "langgraph>=0.1.1",
    "langchain-core>=0.3.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "groq>=0.9.0",
]
